# pelikan

./: CMakeLists.txt  README.md  append_test.py  get_test.py  put_test.py  reset_test.py  stats_test.py
benchmarks/: CMakeLists.txt  bench_micro.c  bench_slab.c  bench_storage.c  bench_storage.h
benchmarks/bench_storage/: CMakeLists.txt  storage.h  storage_slab.c
benchmarks/storage_cuckoo/: storage_cuckoo.c
benchmarks/storage_slab/: CMakeLists.txt  storage_slab.c
config/: twemcache.conf
src/datapool/: datapool.h  datapool_pmem.c  datapool_shm.c
src/protocol/admin/: parse.c
src/server/slimcache/data/: process.c
src/storage/cuckoo/: cuckoo.c  cuckoo.h
src/storage/slab/: item.c  item.h  slab.c  slab.h
src/time/: time.h
test/datapool/: check_datapool.c
test/storage/slab/: check_slab.c
test/storage/slab_pmem/: check_slab_pmem.c
